# cybulde-data-handson

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.dvc/: config
cybulde/: get_raw_data.py  process_data.py  version_data.py
cybulde/config_schemas/: config_schema.py  data_processing_schema.py  gcp_schema.py  raw_data_schema.py
cybulde/config_schemas/dask_cluster/: dask_cluster_schema.py
cybulde/config_schemas/data_processing/: dataset_cleaner_schema.py  dataset_reader_schema.py
cybulde/configs/: data_processing_config.yaml  raw_data_config.yaml
cybulde/configs/dask_cluster/: local_cluster.yaml
cybulde/configs/dataset_cleaner_manager/: simple_dataset_cleaner.yaml
cybulde/configs/dataset_reader_manager/: ghc_jigsaw_twitter.yaml
cybulde/configs/dataset_reader_manager/dataset_reader/: ghc_dataset_reader.yaml  jtc_dataset_reader.yaml  twitter_dataset_reader.yaml
cybulde/data_processing/: dataset_cleaners.py  dataset_readers.py
cybulde/utils/: config_utils.py  data_utils.py  gcp_utils.py  utils.py
data/imported/: raw.dvc
docker/: Dockerfile
notebooks/: checking_stuff.ipynb  eda-ghc.ipynb  eda-jtc.ipynb  eda-twitter.ipynb
